--- a/nginx_container.yaml
+++ b/nginx_container.yaml
@@ -1,7 +1,7 @@
 ---
 - hosts: all
   tasks:
-    - name: check docker container that are running
+    - name: check docker containers running before starting {{ nginxname }} container
       command: docker ps
       become: true
       register: out
@@ -9,11 +9,11 @@
     - debug: var=out.stdout_lines
 
     - name: Run a command to run docker nginx container
-      command: docker run --name={{ dockername }} -P -d nginx
+      command: docker run --name={{ nginxname }} -P -d nginx
       become: true
 
-    - name: check docker container that are running
-      command: docker ps
+    - name: check {{ nginxname }} container status
+      command: docker ps -f name={{ nginxname }}
       become: true
       register: finalout
     
