--- a/nginx_container.yaml
+++ b/nginx_container.yaml
@@ -1,20 +1,24 @@
 ---
 - hosts: all
   tasks:
-    - name: check docker containers running before starting {{ nginxname }} container
-      command: docker ps
-      become: true
-      register: out
+##    - name: check docker containers running before starting {{ nginxname }} container
+##      command: docker ps
+##      become: true
+##      register: out
+##    - debug: var=out.stdout_lines
 
-    - debug: var=out.stdout_lines
-
-    - name: Run a command to start docker nginx container
+    - name: Run a command to start nginx container
       command: docker run --name={{ nginxname }} -p {{ nginxport }}:80 -d nginx
       become: true
+
+    - debug: 
+    msg: Check {{ nginxname }} container status running on {{ nginxport }}
 
     - name: check {{ nginxname }} container status running on {{ nginxport }}
       command: docker ps -f name={{ nginxname }}
       become: true
       register: finalout
-    
     - debug: var=finalout.stdout_lines
+
+    - debug:
+    msg: Access Nginx using http://{{ nginxname }}:{{ nginxport }}
