--- a/nginx_container.yaml
+++ b/nginx_container.yaml
@@ -21,4 +21,4 @@
     - debug: var=finalout.stdout_lines
 
     - debug:
-        msg: Access Nginx using http://{{ nginxname }}:{{ nginxport }}
+        msg: Access Nginx using http://169.62.229.200:{{ nginxport }}
